# anjin

./: .gitignore  README.md  dependency_updates.html  package_changelogs.json  pyproject.toml  release_notes.py
src/anjin/: __init__.py  __main__.py  cache.py  changelog_registry.py  changelogs.py  config.py  dependency.py  generate_html.py  get_snippets.py  openai_client.py  release_notes.py  vector.py
src/anjin/scripts/: populate_changelogs.py
