[project]
name = "anjin"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Michael Smedes", email = "smichaelmedes@gmail.com" }
]
dependencies = [
    "typer>=0.12.5",
    "pygithub>=2.3.0",
    "httpx>=0.27.0",
    "openai>=1.42.0",
    "rich>=13.7.1",
    "packaging>=24.1",
    "python-dotenv>=1.0.1",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.4.0",
    "ruff>=0.6.2",
    "beautifulsoup4>=4.12.3",
    "tiktoken>=0.7.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"anjin" = "anjin:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/anjin"]
