[project]
name = "anjin"
version = "0.1.1"
description = "Anjin is a project dependency analytics tool"
authors = [
    { name = "Michael Smedes", email = "smichaelmedes@gmail.com" }
]
dependencies = [
    "typer>=0.12.5",
    "httpx>=0.27.0",
    "openai>=1.42.0",
    "rich>=13.7.1",
    "packaging>=24.1",
    "python-dotenv>=1.0.1",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.4.0",
    "changelogs>=0.15.0",
    "chromadb>=0.5.15",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"anjin" = "anjin:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.6.2"
]

[tool.rye.scripts]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/anjin"]
